--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi-Tsinghua"
 pymongo = "==3.7.0"
 flask = "==1.0.2"
 flask-restful = "==0.3.6"
+flask-script = "==2.0.6"
 
 [dev-packages]
 flask-testing = "*"
